--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,12 +8,16 @@ jobs:
       with:
         submodules : recursive
     - run: .\msvc_x64.bat
-  liunx:
+  linux:
     runs-on: ubuntu-16.04
     steps:
     - uses: actions/checkout@v2
       with:
         submodules : recursive
+    - run: sudo apt-get update
+    - run: sudo apt-get install -y libreadline-dev ninja-build
+    - run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 100
+    - run: sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 100
     - run: ninja -f ninja/linux.ninja
   macos:
     runs-on: macos-latest
@@ -21,4 +25,5 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules : recursive
+    - run: brew install ninja
     - run: ninja -f ninja/macos.ninja
