--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -7,7 +7,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules : recursive
-    - run: .\msvc_x64.bat
+    - run: .\compile\msvc_x64.bat
   linux:
     runs-on: ubuntu-16.04
     steps:
