--- a/.luarc.json
+++ b/.luarc.json
@@ -3,25 +3,17 @@
         "disable": [
             "discard-returns"
         ],
+        "groupFileStatus": {
+            "unused": "Any"
+        },
+        "groupSeverity": {
+            "unused": "Warning"
+        },
         "neededFileStatus": {
-            "redefined-local": "Any",
-            "unused-vararg": "Any",
-            "unused-function": "Any",
-            "unused-local": "Any",
-            "unused-label": "Any",
-            "code-after-break": "Any",
-            "empty-block": "Any",
-            "trailing-space": "Any"
+            "redefined-local": "Any"
         },
         "severity": {
-            "redefined-local": "Warning",
-            "unused-vararg": "Warning",
-            "unused-function": "Warning",
-            "unused-local": "Warning",
-            "unused-label": "Warning",
-            "code-after-break": "Warning",
-            "empty-block": "Warning",
-            "trailing-space": "Warning"
+            "redefined-local": "Warning"
         }
     },
     "completion": {
