--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,7 @@ jobs:
       with:
         submodules : recursive
     - run: .\compile\build.bat
+    - run: .\luamake.exe
   linux:
     runs-on: ubuntu-18.04
     steps:
@@ -19,6 +20,7 @@ jobs:
     - run: sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-9 100
     - run: sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 100
     - run: ./compile/build.sh
+    - run: ./luamake
   macos:
     runs-on: macos-latest
     steps:
@@ -27,3 +29,4 @@ jobs:
         submodules : recursive
     - run: brew install ninja
     - run: ./compile/build.sh
+    - run: ./luamake
