--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ indent_size = 4
 # if indent_style is tab, this is valid
 tab_width = 4
 # none/single/double
-quote_style = none
+quote_style = double
 
 continuation_indent = 4
 
