--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,8 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules : recursive
-    - run: sudo apt-get update
-    - run: sudo apt-get install -y libreadline-dev ninja-build
+    - run: sudo apt install -y libreadline-dev ninja-build
+    - run: sudo apt install -y binutils-dev libunwind-dev
     - run: ./compile/build.sh
     - run: ./luamake version
   macos:
