--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,7 +11,8 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules : recursive
-    - run: .\compile\build.bat
+    - run: .\compile\build.bat notest
+    - run: .\build\msvc\bin\bootstrap.exe .\bee.lua\test\test.lua -v
     - run: .\luamake.exe version
   ubuntu:
     strategy:
