--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        version: [22.04, 24.04]
+        version: [22.04, 24.04, 22.04-arm, 24.04-arm]
     runs-on: ubuntu-${{ matrix.version }}
     steps:
     - uses: actions/checkout@v4
